<resources>
    <string name="app_name">Hipsters</string>
    <string name="Email">Email</string>
    <string name="pass">Password</string>
    <string name="cpass">Confirm Password</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGNUP</string>
    <string name="name">Name</string>
    <string name="Mobile">Mobile</string>
    <string name="add">Address</string>
    <string name="State">State</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_navdrawer">navdrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="Order">Order</string>
    <string name="Cart">Shopping Cart</string>
    <string name="Logout">Log-Out</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>


</resources>
