<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/cart"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/Cart" />
        <item
            android:id="@+id/orders"
            android:icon="@drawable/ic_shopping_basket_black_24dp"
            android:title="@string/Order" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:title="@string/Logout" />
    </group>
</menu>
